--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <title>纸上的彩虹</title>
+    <link rel='icon' href='/app/static/images/logo.ico'>
 </head>
 <body>
   <link rel="stylesheet/less" type="text/css" href="/color.less" />
