--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,14 @@
     <link rel='icon' href='/app/static/images/logo.ico'>
 </head>
 <body>
-  <link rel="stylesheet/less" type="text/css" href="/color.less" />
+  <link rel="stylesheet/less" type="text/css" href="./color.less" />
   <script>
     window.less = {
       async: false,
-      env: 'production'
+      env: 'production',
     };
   </script>
+  <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/less.js/2.7.2/less.min.js"></script>
   <div id="app"></div>
 </body>
 </html>
